// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ghsezF FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iAMDuy FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 bmDVpr TextArea__StyledInput-sc-ixw2m3-0 hIvXmI"
          disabled=""
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ghsezF FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jogsYI FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 eSLCqy TextArea__StyledInput-sc-ixw2m3-0 hIvXmI"
          placeholder="Please write a story"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ghsezF FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <span
        class="StyledText-sc-1sadyjn-0 ccrOLA"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 jogsYI FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 eSLCqy TextArea__StyledInput-sc-ixw2m3-0 hIvXmI"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ghsezF FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <label
        class="StyledText-sc-1sadyjn-0 cxWGoc"
        for="some-text"
      >
        A helpful area of text
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 jogsYI FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 eSLCqy TextArea__StyledInput-sc-ixw2m3-0 hIvXmI"
          id="some-text"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ghsezF FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 flbrHM FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 eSLCqy TextArea__StyledInput-sc-ixw2m3-0 hIvXmI"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 glekGW"
      >
        There is something very wrong!
      </span>
    </div>
  </div>
</div>
`;

exports[`TextArea renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 bhEuBi"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bhQbbx"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ghsezF FormField__FormFieldBox-sc-m9hood-0 geyDmP"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jogsYI FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <textarea
          class="StyledTextArea-sc-17i3mwp-0 eSLCqy TextArea__StyledInput-sc-ixw2m3-0 hIvXmI"
          rows="5"
        >
          The quick brown fox jumps over the lazy dog
        </textarea>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 jNjjQj"
      >
        Some useful information
      </span>
    </div>
  </div>
</div>
`;
